# File-Sharing-System

./: .gitignore  .travis.yml  README.md  nano.save  test.txt
Documents/: ServerAPI.md  ServerProtocol.md  gui.pptx
GUI Prototype presentation/: gui.pptx
src/Client/: Application.cpp  Application.h  CMakeLists.txt  Client.cpp  ClientInterface.cpp  ClientInterface.h  FileSharingSystemClient.pro  ICrypter.h  main.cpp
src/Client/BL/: Client.cpp  Client.h  ClientInterface.cpp  ClientInterface.h
src/Client/Common/: Configuration.cpp  Configuration.h  FileRepresentation.cpp  FileRepresentation.h  GUINodeItem.cpp  GUINodeItem.h  LinuxCrypter.cpp  LinuxCrypter.h  Node.h  RequestReader.h  RequestWritter.h  ServerResults.h
src/Client/GUI/: AuthorizationWindow.cpp  AuthorizationWindow.h  AuthorizationWindow.ui  NodeCreatingWindow.cpp  NodeCreatingWindow.h  NodesWindow.cpp  NodesWindow.h  StartingWindow.cpp  StartingWindow.h  StartingWindow.ui  authorizationwindow.cpp  authorizationwindow.h  authorizationwindow.ui  nodecreatingwindow.ui  nodedownloadingwindow.cpp  nodedownloadingwindow.h  nodedownloadingwindow.ui  nodeswindow.ui  startingwindow.cpp  startingwindow.h  startingwindow.ui
src/Client/Models/: Application.cpp  Application.h
src/CryptoLib/: CMakeLists.txt  CryptoLib_global.h  cryptolib.cpp  cryptolib.h
src/Server/: .travis.yml  CMakeLists.txt  main.cpp  serverTEESTT.pro
src/Server/API/: IRequestHandler.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h
src/Server/BL/: AccountManager.cpp  AccountManager.h  Crypter.cpp  Crypter.h  FilesManager.cpp  FilesManager.h  IAccountManager.h  IFilesManager.h  INodesManager.h  NodesManager.cpp  NodesManager.h
src/Server/Common/: AbstractAccountRepository.h  AbstractNodesRepository.h  ClientException.h  Configuration.cpp  Configuration.h  EMailManager.cpp  EMailManager.h  Logger.cpp  Logger.h  Node.cpp  Node.h  RequestReader.h  RequestWritter.h  ServerResults.h  databaseobject.cpp  databaseobject.h  email.sh
src/Server/Data/: AbstractAccountRepository.h  AbstractFilesRepository.h  AbstractNodesRepository.h  AccountsRepository.cpp  AccountsRepository.h  DataBaseSingleton.cpp  DataBaseSingleton.h  EMailManager.cpp  EMailManager.h  FileRepresentation.cpp  FileRepresentation.h  FilesRepository.cpp  FilesRepository.h  IDataBase.cpp  IDataBase.h  MySQLDataBase.cpp  MySQLDataBase.h  NodesRepository.cpp  NodesRepository.h  databaseobject.cpp  databaseobject.h  users
src/Server/Libraries/mysql-connector-cpp/devapi/tests/: CMakeLists.txt
src/Server/Resources/: email.sh
